--- a/Public/admin/index.html
+++ b/Public/admin/index.html
@@ -258,13 +258,16 @@
                     </li>
                     <li class="submenu">
                         <a class="dropdown" href="#" data-original-title="Tables"><i class="glyphicon glyphicon-th-list"></i><span
-                                class="hidden-minibar"> 投资团队 <span class="badge bg-primary pull-right">1</span></a>
+                                class="hidden-minibar"> 投资团队 <span class="badge bg-primary pull-right">2</span></a>
                         <ul>
                             <!--<li><a href="team.html" data-original-title="Basic"><i
                                     class="fa fa-table"></i><span>  团队简介</span></a>
                             </li>-->
                             <li><a href="member.html" data-original-title="Editable"><i
                                     class="fa fa-table"></i><span>  人员管理</span></a>
+                            </li>
+                            <li><a href="category.html" data-original-title="Editable"><i
+                                    class="fa fa-table"></i><span>  类别管理</span></a>
                             </li>
                         </ul>
                     </li>
