--- a/Public/home/team.html
+++ b/Public/home/team.html
@@ -566,8 +566,10 @@
     .p2 {
         width: 30px;
         margin: -4px auto;
-        height: 0px;
+        height: 2px;
         display: none;
+        color: #9b761d;
+        background-color: #9b761d;
     }
 
     .p1:hover {
