--- a/Public/admin/category.html
+++ b/Public/admin/category.html
@@ -320,7 +320,7 @@
         <div class="content">
             <div class="row">
                 <div class="col-mod-12">
-                    <h4 class="page-header"><i class="fa fa fa-dashboard"></i> 首页 》内容管理</h4>
+                    <h4 class="page-header"><i class="fa fa fa-dashboard"></i> 投资团队 》类别管理</h4>
                 </div>
             </div>
             <div class="row" id="form" style="width: 97%;margin-bottom: 30px; margin-left: 1%;display: none;">
