--- a/Public/home/team.html
+++ b/Public/home/team.html
@@ -223,8 +223,13 @@
                 success: function (r) {
                     var len = r.msg.length;
                     for (var i = 0; i < len; i++) {
-                        $('#category').append("<div class='fl'><p class='p1' onclick='search(this)' id='p1'>" + r.msg[i].category + "</p><p class='p2'></p>" +
-                        "</div><div style='width: 1px;height: 15px;background-color: #4c4c4c;float: right;margin-top: 5px;margin-left: 15px;margin-right: 15px;'></div>");
+                        if(r.msg[i].defaults == 1){
+                            $('#category').prepend("<div class='fl'><p class='p1' onclick='search(this)' style='color: #9b761d' id='p1'>" + r.msg[i].category + "</p><p class='p2' style='display: block'></p>" +
+                            "</div><div style='width: 1px;height: 15px;background-color: #4c4c4c;float: right;margin-top: 5px;margin-left: 15px;margin-right: 15px;'></div>");
+                        }else{
+                            $('#category').prepend("<div class='fl'><p class='p1' onclick='search(this)' id='p1'>" + r.msg[i].category + "</p><p class='p2'></p>" +
+                            "</div><div style='width: 1px;height: 15px;background-color: #4c4c4c;float: right;margin-top: 5px;margin-left: 15px;margin-right: 15px;'></div>");
+                        }
 
                     }
                     var height = $(document.body).height();
@@ -270,8 +275,14 @@
                 success: function (r) {
                     var len = r.msg.length;
                     for (var i = 0; i < len; i++) {
-                        $('#category').prepend("<div class='fl'><p class='p1' onclick='search(this)' id='p1'>" + r.msg[i].category + "</p><p class='p2'></p>" +
-                        "</div><div style='width: 1px;height: 15px;background-color: #4c4c4c;float: right;margin-top: 5px;margin-left: 15px;margin-right: 15px;'></div>");
+                        if(r.msg[i].defaults == 1){
+                            $('#category').prepend("<div class='fl'><p class='p1' onclick='search(this)' style='color: #9b761d' id='p1'>" + r.msg[i].category + "</p><p class='p2' style='display: block'></p>" +
+                            "</div><div style='width: 1px;height: 15px;background-color: #4c4c4c;float: right;margin-top: 5px;margin-left: 15px;margin-right: 15px;'></div>");
+                        }else{
+                            $('#category').prepend("<div class='fl'><p class='p1' onclick='search(this)' id='p1'>" + r.msg[i].category + "</p><p class='p2'></p>" +
+                            "</div><div style='width: 1px;height: 15px;background-color: #4c4c4c;float: right;margin-top: 5px;margin-left: 15px;margin-right: 15px;'></div>");
+                        }
+
                     }
                     var height = $(document.body).height();
                     $('#mask').height(height);
