--- a/Public/admin/member.html
+++ b/Public/admin/member.html
@@ -521,9 +521,10 @@
                                     </th>
                                     <th class="visible-lg" style="width: 6%">编号</th>
                                     <!--<th class="visible-lg" style="width: 8%">管理员</th>-->
-                                    <th class="visible-lg" style="width: 12%">头像</th>
                                     <th class="visible-lg" style="width: 8%">姓名</th>
                                     <th class="visible-lg" style="width: 8%">英文名</th>
+                                    <th class="visible-lg" style="width: 8%">类别</th>
+                                    <th class="visible-lg" style="width: 8%">类别(英文)</th>
                                     <th class="visible-lg" style="width: 8%">职位</th>
                                     <th class="visible-lg" style="width: 10%">职位(英文)</th>
                                     <th class="visible-lg" style="width: 6%">中文展示</th>
