--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -59,7 +59,6 @@
     #detail div img {
         height: 130px;
         border-radius: 2px;
-        box-shadow: 0px 3px 6px #999;
     }
 
 
@@ -294,17 +293,17 @@
 
     function detail(id) {
         document.documentElement.style.overflow = "hidden";
-        $('#ch,#en').children('div').css('display', 'block');
+        $('.ch,.en').children('div').css('display', 'block');
         $('#invest').css('display', 'block');
         $('#mask').css('display', 'block');
         var id = $(id).children('p').children('span').text();
         var aQuery = window.location.href;
         if (aQuery.indexOf("status") > 0) {
-            $('#en').css('display', 'block');
-            $('#ch').css('display', 'none');
+            $('.en').css('display', 'block');
+            $('.ch').css('display', 'none');
         } else {
-            $('#en').css('display', 'none');
-            $('#ch').css('display', 'block');
+            $('.en').css('display', 'none');
+            $('.ch').css('display', 'block');
         }
         $.ajax({
             url: '/home/index/case_detail',
@@ -814,57 +813,59 @@
             <img style="margin-left: 96%;margin-top: 15px;" src="images/off.jpg"
                  onclick="javascript:$('#invest').css('display','none');$('#mask').css('display','none');document.documentElement.style.overflow='';">
 
-            <div class="col-lg-7 col-lg-offset-5" id="invest_name"
+            <div class="col-lg-8 col-lg-offset-4" id="invest_name"
                  style="padding: 0;font-size: 24px;font-family: 'Microsoft YaHei';color: #4c4c4c">
 
             </div>
-            <div class="col-lg-offset-5 col-lg-7" style="padding: 0;">
+            <div class="col-lg-offset-4 col-lg-8" style="padding: 0;">
                 <div style="position: relative;float: left;margin-top: 15px;width:30px !important;border: 2px #b0a065 solid;border-radius: 3px;"></div>
             </div>
-            <div class="col-lg-5" style="text-align:center;margin-top: 50px;">
+            <div class="col-lg-4" style="text-align:center;margin-top: 0px;">
                 <img id="invest_img"
-                     style="margin: -10px auto; width: 250px;height:190px;box-shadow: 0px 3px 6px #999;"/>
-            </div>
-            <div class="col-lg-7" id="scroll"
-                 style="padding: 0;margin-top:30px;height:330px;width: 55.777% !important;">
-                <div style="padding: 0;width: 100%;" id="ch">
-                    <div class="col-lg-12" style="font-size: 14px;">投资阶段：<span id="invest_stage"></span></div>
-                    <div class="col-lg-11" style="font-size: 14px;">投资时间：<span id="invest_time"></span></div>
-                    <div class="col-lg-11" style="font-size: 14px;">地域：<span id="areas"></span></div>
-                    <div class="col-lg-11" style="font-size: 14px;">行业：<span id="trade"></span></div>
-                    <div class="col-lg-11 exit" style="font-size: 14px;">退出时间：<span id="invest_exit_time"></span></div>
-                    <div class="col-lg-11 exit" style="font-size: 14px;">退出方式：<span id="invest_exit_way"></span></div>
-                    <div class="col-lg-11 exit" style="font-size: 14px;">投资收益：<span id="invest_reward"></span></div>
-                    <div class="col-lg-11 exit addr" style="font-size: 14px;">上市地点：<span id="invest_addr"></span></div>
-                    <div class="col-lg-11 exit up_stock" style="font-size: 14px;">上市股票：<span id="up_stock"></span></div>
-                    <div class="col-lg-11" style="font-size: 14px;">公司网站：
-                        <a href="" id="invest_web"></a>
-                    </div>
-                    <div class="col-lg-12" id="invest_intro"
-                         style="font-size: 14px;line-height: 2;padding-top: 30px;"></div>
+                     style="margin: -20px auto; width: 200px; margin-bottom: 1px;"/>
+                <div style="padding: 0;width: 100%" class="ch">
+                <div class="col-lg-10 col-lg-offset-2" style="font-size: 14px;text-align: left">投资阶段：<span id="invest_stage"></span></div>
+                <div class="col-lg-10 col-lg-offset-2" style="font-size: 14px;text-align: left">投资时间：<span id="invest_time"></span></div>
+                <div class="col-lg-10 col-lg-offset-2" style="font-size: 14px;text-align: left">地域：<span id="areas"></span></div>
+                <div class="col-lg-10 col-lg-offset-2" style="font-size: 14px;text-align: left">行业：<span id="trade"></span></div>
+                <div class="col-lg-10 col-lg-offset-2 exit" style="font-size: 14px;text-align: left">退出时间：<span id="invest_exit_time"></span></div>
+                <div class="col-lg-10 col-lg-offset-2 exit" style="font-size: 14px;text-align: left">退出方式：<span id="invest_exit_way"></span></div>
+                <div class="col-lg-10 col-lg-offset-2 exit" style="font-size: 14px;text-align: left">投资收益：<span id="invest_reward"></span></div>
+                <div class="col-lg-10 col-lg-offset-2 exit addr" style="font-size: 14px;text-align: left">上市地点：<span id="invest_addr"></span></div>
+                <div class="col-lg-10 col-lg-offset-2 exit up_stock" style="font-size: 14px;text-align: left">上市股票：<span id="up_stock"></span></div>
+                <div class="col-lg-10 col-lg-offset-2" style="font-size: 14px;text-align: left">公司网站：
+                    <a href="" id="invest_web"></a>
+                </div></div>
+                <div style="padding: 0;width: 100%" class="en">
+                <div class="col-lg-12" style="font-size: 14px;">Investment Staged：<span id="invest_stage_en"></span>
                 </div>
-                <div style="padding: 0;width: 100%" id="en">
-                    <div class="col-lg-12" style="font-size: 14px;">Investment Staged：<span id="invest_stage_en"></span>
-                    </div>
-                    <div class="col-lg-11" style="font-size: 14px;">Investment Time：<span id="invest_time_en"></span>
-                    </div>
-                    <div class="col-lg-11" style="font-size: 14px;">Area：<span id="areas_en"></span>
-                    </div>
-                    <div class="col-lg-11" style="font-size: 14px;">Sectors：<span id="trade_en"></span>
-                    </div>
-                    <div class="col-lg-11 exit" style="font-size: 14px;">Exit Time：<span
-                            id="invest_exit_time_en"></span></div>
-                    <div class="col-lg-11 exit" style="font-size: 14px;">Exit Way：<span id="invest_exit_way_en"></span>
-                    </div>
-                    <div class="col-lg-11 exit" style="font-size: 14px;">Investment Return：<span
-                            id="invest_reward_en"></span></div>
-                    <div class="col-lg-11 exit addr" style="font-size: 14px;">Listing Location：<span
-                            id="invest_addr_en"></span></div>
-                    <div class="col-lg-11 exit up_stock" style="font-size: 14px;">Lised Stocks：<span
-                            id="up_stock_en"></span></div>
-                    <div class="col-lg-11" style="font-size: 14px;">Company Web：
-                        <a href="" id="invest_web_en"></a>
-                    </div>
+                <div class="col-lg-11" style="font-size: 14px;">Investment Time：<span id="invest_time_en"></span>
+                </div>
+                <div class="col-lg-11" style="font-size: 14px;">Area：<span id="areas_en"></span>
+                </div>
+                <div class="col-lg-11" style="font-size: 14px;">Sectors：<span id="trade_en"></span>
+                </div>
+                <div class="col-lg-11 exit" style="font-size: 14px;">Exit Time：<span
+                        id="invest_exit_time_en"></span></div>
+                <div class="col-lg-11 exit" style="font-size: 14px;">Exit Way：<span id="invest_exit_way_en"></span>
+                </div>
+                <div class="col-lg-11 exit" style="font-size: 14px;">Investment Return：<span
+                        id="invest_reward_en"></span></div>
+                <div class="col-lg-11 exit addr" style="font-size: 14px;">Listing Location：<span
+                        id="invest_addr_en"></span></div>
+                <div class="col-lg-11 exit up_stock" style="font-size: 14px;">Lised Stocks：<span
+                        id="up_stock_en"></span></div>
+                <div class="col-lg-11" style="font-size: 14px;">Company Web：
+                    <a href="" id="invest_web_en"></a>
+                </div></div>
+            </div>
+            <div class="col-lg-8" id="scroll"
+                 style="padding: 0;margin-top:10px;height:350px;width: 63% !important;">
+                <div style="padding: 0;width: 100%;" class="ch">
+                    <div class="col-lg-12" id="invest_intro"
+                         style="font-size: 14px;line-height: 2;padding-top: 0px;"></div>
+                </div>
+                <div style="padding: 0;width: 100%" class="en">
                     <div class="col-lg-11 invest_en" id="invest_intro_en"
                          style="font-size: 14px;line-height: 2;padding-top: 30px;"></div>
                 </div>
