--- a/Public/home/news.html
+++ b/Public/home/news.html
@@ -102,7 +102,7 @@
                     var len = r.msg.length;
                     for (var i = 0; i < len; i++) {
                         $('#news_list').append("<div class='col-lg-1 col-lg-offset-1' style='padding-top: 2px;'><span style='font-size: 16px; color: #7c7c7c'>" + r.msg[i].time1 + "</span><br><span style='font-size: 14px; color: #7c7c7c'>" + r.msg[i].time2 + "</span></div>" +
-                        "<div class='col-lg-9'><a href='news_detail.html?id=" + r.msg[i].id + "' class='title'>" + r.msg[i].title + "</a></div>" +
+                        "<div class='col-lg-9'><a href='news_detail.html?id=" + r.msg[i].id + "&status=1' class='title'>" + r.msg[i].title + "</a></div>" +
                         "<div class='col-lg-9 col-lg-offset-2 content'>" + r.msg[i].intro + "</div>" +
                         "<hr class='col-lg-9 col-lg-offset-2'>");
                     }
@@ -383,16 +383,6 @@
     </div>
     <div class="holder">
     </div>
-    <!--<div class="row">
-        <div id="show" onclick="show()" class="col-lg-10 col-lg-offset-1"
-             style="text-align: center; display:block;color: #999">
-            ——&nbsp;&nbsp;<span id="more">查看更多</span>&nbsp;&nbsp;——
-        </div>
-        <div id="up" onclick="up()" class="col-lg-10 col-lg-offset-1"
-             style="text-align: center;display:none;color: #999">
-            ——&nbsp;&nbsp;<span id="ups">收起</span>&nbsp;&nbsp;——
-        </div>
-    </div>-->
 </div>
 <div class="container" style="margin-top: 50px;width:100%;background-color: #525c75;">
     <div class="row" id="bottom">
